--- a/Basketball/Basketball.csproj
+++ b/Basketball/Basketball.csproj
@@ -96,6 +96,15 @@
     <ImageAsset Include="Assets.xcassets\sneaker.imageset\sneaker.png" />
     <ImageAsset Include="Assets.xcassets\pause.imageset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\pause.imageset\pause.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-29x29%401x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-29x29%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-29x29%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-40x40%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-40x40%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-57x57%401x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-57x57%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-60x60%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-60x60%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -108,6 +117,10 @@
   <ItemGroup>
     <BundleResource Include="GameScene.sks" />
     <BundleResource Include="Resources\en.lproj\GameScene.sks" />
+    <BundleResource Include="Resources\whistle.caf" />
+    <BundleResource Include="Resources\timer.caf" />
+    <BundleResource Include="Resources\bounce.caf" />
+    <BundleResource Include="Resources\cheers.caf" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
